[gd_scene load_steps=4 format=2]

[ext_resource path="res://Line1.gd" type="Script" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://6.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 827, 1169 )
z_index = -1
texture = ExtResource( 3 )

[node name="Line1" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="1M" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="1M"]
polygon = PoolVector2Array( 137, 1547, 123, 1574, 124, 1602, 288, 2055, 316, 2074, 1296, 2073, 1330, 2050, 1508, 1612, 1499, 1569, 1472, 1546, 371, 1544 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="1M"]
polygon = PoolVector2Array( 341, 1552, 745, 928, 824, 930, 1247, 1556 )

[node name="c1" type="TextureButton" parent="."]
margin_left = 1173.0
margin_top = 394.0
margin_right = 1213.0
margin_bottom = 434.0
rect_scale = Vector2( 7.38241, 6.34587 )

[node name="c2" type="TextureButton" parent="."]
margin_left = 1173.0
margin_top = 641.0
margin_right = 1213.0
margin_bottom = 681.0
rect_scale = Vector2( 7.38241, 6.67784 )

[node name="c3" type="TextureButton" parent="."]
margin_left = 1173.0
margin_top = 917.0
margin_right = 1213.0
margin_bottom = 957.0
rect_scale = Vector2( 7.46362, 6.23993 )

[node name="c4" type="TextureButton" parent="."]
margin_left = 1171.0
margin_top = 1167.0
margin_right = 1211.0
margin_bottom = 1207.0
rect_scale = Vector2( 7.46362, 6.79993 )

[connection signal="mouse_entered" from="1M" to="." method="_on_1M_mouse_entered"]
[connection signal="mouse_exited" from="1M" to="." method="_on_1M_mouse_exited"]
[connection signal="pressed" from="c1" to="." method="_on_c1_pressed"]
[connection signal="pressed" from="c2" to="." method="_on_c2_pressed"]
[connection signal="pressed" from="c3" to="." method="_on_c3_pressed"]
[connection signal="pressed" from="c4" to="." method="_on_c4_pressed"]
